--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,14 +12,32 @@ body {
 }
 
 .question {
+	display: flex;
 	background-color: $lightblue;
 	padding: 1rem;
 	margin-bottom: 10px;
 	border-radius: 3px;
+	overflow: hidden;
 
 	&:hover:not(.question--active):not(.question--disabled) {
 		cursor: pointer;
 		background-color: darken($lightblue, 3%);
+	}
+
+	&:first-child {
+		.question__status {
+			&:before {
+				content: none;
+			}
+		}
+	}
+
+	&:last-child {
+		.question__status {
+			&:after {
+				content: none;
+			}
+		}
 	}
 }
 
@@ -33,12 +51,42 @@ body {
 	.question__heading {
 		color: white;
 	}
+
+	.question__status {
+		background-color: $cyan;
+	
+		&:before,
+		&:after {
+			background-color: $cyan;
+		}
+	}
 }
 
 .question--disabled {
 	.question__title {
 		color: darken($lightblue, 10%);
 	}
+
+	.question__status {
+		background-color: darken($lightblue, 10%);
+	
+		&:before,
+		&:after {
+			background-color: darken($lightblue, 10%);
+		}
+	}
+}
+
+.question--next {
+	.question__status {
+		&:after {
+			background-color: darken($lightblue, 10%);
+		}
+	}
+}
+
+.question__block {
+	margin-left: .75rem;
 }
 
 .question__title {
@@ -113,4 +161,44 @@ body {
 		background-color: rgba(white, 0.9);
 		cursor: pointer;
 	}
+}
+
+.question__status {
+	position: relative;
+	margin-top: .2rem;
+	width: 18px;
+	height: 18px;
+	background-color: $blue;
+	border-radius: 50%;
+	z-index: 1;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	&:before,
+	&:after {
+		content: '';
+		position: absolute;
+		left: calc(50% - 1px);
+		width: 2px;
+		background-color: $blue;
+	}
+
+	&:before {
+		height: 50px;
+		bottom: 0;
+	}
+
+	&:after {
+		height: 1000px;
+		top: 0;
+		z-index: -1;
+	}
+}
+
+.question__saved {
+	position: relative;
+	color: white;
+	font-size: 12px;
+	z-index: 1;
 }
