--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,10 +10,13 @@ body {
 }
 
 .quiz {
-	list-style-type: none;
-	padding: 0;
 	margin: 0 auto;
 	max-width: 960px;
+}
+
+.questions {
+	list-style-type: none;
+	padding: 0;
 }
 
 .question {
@@ -292,4 +295,56 @@ body {
 	height: 10px;
 	border-radius: 50%;
 	z-index: 1;
+}
+
+.results {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-top: 2rem;
+
+	@media (min-width: 720px) {
+		flex-direction: row;
+	}
+}
+
+.results__score {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	background-color: $cyan;
+	padding: 2rem;
+	border-radius: 3px;
+	margin-right: 2rem;
+	min-width: 200px;
+	min-height: 200px;
+	border-radius: 50%;
+	
+	@media (min-width: 720px) {
+		//max-width: 200px;
+	}
+
+	span {
+		line-height: 1;
+	}
+	
+	span:first-child {
+		font-weight: 700;
+		font-size: 10rem;
+		color: white;
+		margin-top: -2rem;
+	}
+	
+	span:last-child {
+		font-size: 1.75rem;
+		color: rgba(white, 0.75);
+	}
+}
+
+.results__message {
+	font-size: 4rem;
+	font-weight: 700;
+	color: $cyan;
+	line-height: 0.9;
 }
