--- a/src/styles.scss
+++ b/src/styles.scss
@@ -314,37 +314,51 @@ body {
 	justify-content: center;
 	flex-direction: column;
 	background-color: $cyan;
-	padding: 2rem;
+	padding: 1rem;
 	border-radius: 3px;
-	margin-right: 2rem;
-	min-width: 200px;
-	min-height: 200px;
+	min-width: 150px;
+	min-height: 150px;
 	border-radius: 50%;
 	
-	@media (min-width: 720px) {
-		//max-width: 200px;
-	}
-
 	span {
 		line-height: 1;
 	}
 	
 	span:first-child {
 		font-weight: 700;
-		font-size: 10rem;
+		font-size: 7rem;
 		color: white;
 		margin-top: -2rem;
 	}
 	
 	span:last-child {
-		font-size: 1.75rem;
+		font-size: 1.2rem;
 		color: rgba(white, 0.75);
+	}
+	
+	@media (min-width: 720px) {
+		padding: 2rem;
+		margin-right: 2rem;
+		min-width: 200px;
+		min-height: 200px;
+
+		span:first-child {
+			font-size: 10rem;
+		}
+		
+		span:last-child {
+			font-size: 1.75rem;
+		}
 	}
 }
 
 .results__message {
-	font-size: 4rem;
 	font-weight: 700;
+	font-size: 2rem;
 	color: $cyan;
 	line-height: 0.9;
+	
+	@media (min-width: 720px) {
+		font-size: 4rem;
+	}
 }
